welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: Missing closing brace `}' assumed here
var fini = false
^BDRBuggle:32: error: ')' expected but 'else' found.
							}else{
                                                         ^